Add large files with Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.glb filter=lfs diff=lfs merge=lfs -text
-
+C:/Users/alber/bevy_3d_rendering/assets/ANGEL-FRANK1_converted.glb filter=lfs diff=lfs merge=lfs -text
+C:/Users/alber/bevy_3d_rendering/webbuild/assets/ANGEL-FRANK1_converted.glb filter=lfs diff=lfs merge=lfs -text
+C:/Users/alber/bevy_3d_rendering/assets/ANGEL-FRANK1_converted.glb filter=lfs diff=lfs merge=lfs -text
