--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,40 @@
-name: Deploy to GitHub Pages
+name: Build and Deploy Bevy WASM Project
 
 on:
   push:
-    branches:
-      - main  # Modifica se il tuo branch principale ha un altro nome
+    branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: wasm32-unknown-unknown
-          override: true
-  
-      - name: Install wasm-bindgen-cli
-        run: cargo install wasm-bindgen-cli
+    - name: Install Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        target: wasm32-unknown-unknown
+        override: true
 
-      - name: Build
-        working-directory: ./main
-        run: |
-          cargo build --release --target wasm32-unknown-unknown
-          wasm-bindgen --out-dir ./out/ --target web ./target/wasm32-unknown-unknown/release/bevy_3d_rendering.wasm
+    - name: Install wasm-bindgen-cli
+      run: cargo install wasm-bindgen-cli
 
-      - name: Update gh-pages
-        run: |
-          cp -R out/* gh-pages/
-          cp -R assets gh-pages/assets  # Assicurati che questo percorso sia corretto
-          cd gh-pages
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
-          git commit -m "Update WebAssembly build" || echo "No changes to commit"
-          git push
+    - name: Build
+      run: |
+        cargo build --release --target wasm32-unknown-unknown
+        wasm-bindgen --out-dir ./out --target web target/wasm32-unknown-unknown/release/bevy_3d_rendering.wasm
+
+    - name: Prepare deployment
+      run: |
+        mkdir deploy
+        cp index.html deploy/
+        cp -r out deploy/
+        cp -r assets deploy/
+
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./deploy
