--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.14.0-rc.3", features = ["jpeg", "animation"] }
 taffy ="0.5.1"
+wasm-bindgen = "=0.2.93"
 
