--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,9 @@ jobs:
     - name: Install wasm-bindgen-cli
       run: cargo install wasm-bindgen-cli
 
-    - name: Update Cargo.toml
+    - name: Fix Cargo.toml
       run: |
-        WASM_BINDGEN_VERSION=$(cargo install --list | grep wasm-bindgen-cli | awk '{print $2}')
-        sed -i 's/^wasm-bindgen = ".*"/wasm-bindgen = "'$WASM_BINDGEN_VERSION'"/' Cargo.toml
+        sed -i 's/wasm-bindgen = "v\([0-9.]*\)"/wasm-bindgen = "\1"/' Cargo.toml
 
     - name: Build
       run: |
