--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,9 +54,11 @@ jobs:
     - name: Prepare deployment
       run: |
         mkdir -p deploy/assets
+        mkdir -p deploy/out
         cp index.html deploy/
-        cp -r out deploy/
+        cp -r out/* deploy/out/
         cp -r assets/* deploy/assets/
+        # Verifica del contenuto della directory deploy
         echo "Contenuto della directory deploy:"
         ls -R deploy
 
@@ -65,3 +67,12 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./deploy
+
+    # Aggiungi questo passo per debugging
+    - name: Debug Information
+      if: failure()
+      run: |
+        echo "Contenuto della directory di lavoro:"
+        ls -R
+        echo "Contenuto della directory deploy:"
+        ls -R deploy
